# ChatSUD

./: .gitignore  README.md  SUD_Therapist_Pipeline_colab.ipynb  pyproject.toml
chat_sud/: __init__.py  api.py  app_state.py  chunking.py  cli.py  config.py  generation.py  ingestion.py  retrieval.py  safety.py  schemas.py  training.py
chat_sud/resources/: crisis_resources.json  safety_rules.json
docs/: migration-notes.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-app.tsx  settings-panel.tsx  source-drawer.tsx
frontend/lib/: api.ts  types.ts
scripts/: start-dev-wsl.sh
tests/: conftest.py  test_api.py  test_chunking.py  test_retrieval.py  test_safety.py
tests/fixtures/: sample_documents.json
